tseis_volume_claims.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gr14-tseis-db-server
  namespace: itonk-gr14-tseis
  selfLink: /apis/apps/v1/namespaces/itonk-gr14-tseis/deployments/gr14-tseis-db-server
  uid: d918b6d6-c96a-452d-8003-e2e093d8358a
  resourceVersion: '151219162'
  generation: 4
  creationTimestamp: '2020-05-22T15:46:07Z'
  labels:
    app: gr14-tseis-db-server
  annotations:
    deployment.kubernetes.io/revision: '4'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gr14-tseis-db-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gr14-tseis-db-server
    spec:
      containers:
        - name: itonk-grp14-tseis-dbserver
          image: docker.io/flow417/itonk-grp14-tseis-dbserver
          resources:
            limits:
              memory: 1500Mi
            requests:
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          volumeMounts:
          - name: mssql-base-volume
            mountPath: /var/opt/mssql
          - name: mssql-ldf-volume
            mountPath: /var/opt/mssql/ldf
          - name: mssql-mdf-volume
            mountPath: /var/opt/mssql/mdf
      volumes:
      - name: mssql-base-volume
        persistentVolumeClaim:
          claimName: mssql-base-volume
      - name: mssql-mdf-volume
        persistentVolumeClaim:
          claimName: mssql-mdf-volume
      - name: mssql-ldf-volume
        persistentVolumeClaim:
          claimName: mssql-ldf-volume            
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 4
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-05-24T12:26:17Z'
      lastTransitionTime: '2020-05-24T12:26:17Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-05-24T12:26:17Z'
      lastTransitionTime: '2020-05-22T15:46:07Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "gr14-tseis-db-server-8c47cc4d8" has successfully progressed.
