tseis_volume_claims_new.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gr14-tseis-db-server
  namespace: itonk-gr14-tseis
  selfLink: /apis/apps/v1/namespaces/itonk-gr14-tseis/deployments/gr14-tseis-db-server
  uid: b646b98c-a24a-4bf2-bee0-8fe31764ef75
  resourceVersion: '152098019'
  generation: 2
  creationTimestamp: '2020-05-26T10:25:08Z'
  labels:
    app: gr14-tseis-db-server
  annotations:
    deployment.kubernetes.io/revision: '2'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"4"},"creationTimestamp":"2020-05-22T15:46:07Z","generation":4,"labels":{"app":"gr14-tseis-db-server"},"name":"gr14-tseis-db-server","namespace":"itonk-gr14-tseis","resourceVersion":"151219162","selfLink":"/apis/apps/v1/namespaces/itonk-gr14-tseis/deployments/gr14-tseis-db-server","uid":"d918b6d6-c96a-452d-8003-e2e093d8358a"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisio [...]
      has minimum
      availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"},{"lastTransitionTime":"2020-05-22T15:46:07Z","lastUpdateTime":"2020-05-24T12:26:17Z","message":"ReplicaSet
      \"gr14-tseis-db-server-8c47cc4d8\" has successfully
      progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"}],"observedGeneration":4,"readyReplicas":1,"replicas":1,"updatedReplicas":1}}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gr14-tseis-db-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gr14-tseis-db-server
    spec:
      containers:
        - name: itonk-grp14-tseis-dbserver
          image: docker.io/flow417/itonk-grp14-tseis-dbserver
          resources:
            limits:
              memory: 1500Mi
            requests:
              memory: 1Gi
          volumeMounts:
            - name: mssql-base-volume
              mountPath: /var/opt/mssql
            - name: mssql-ldf-volume
              mountPath: /var/opt/mssql/ldf
            - name: mssql-mdf-volume
              mountPath: /var/opt/mssql/mdf
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      volumes:
        - name: mssql-base-volume
          persistentVolumeClaim:
            claimName: mssql-base-volume
        - name: mssql-mdf-volume
          persistentVolumeClaim:
            claimName: mssql-mdf-volume
        - name: mssql-ldf-volume
          persistentVolumeClaim:
            claimName: mssql-ldf-volume
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
  unavailableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-05-26T10:25:14Z'
      lastTransitionTime: '2020-05-26T10:25:08Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "gr14-tseis-db-server-d88d7f46f" has successfully progressed.
    - type: Available
      status: 'False'
      lastUpdateTime: '2020-05-26T10:09:07Z'
      lastTransitionTime: '2020-05-26T10:09:07Z'
      reason: MinimumReplicasUnavailable
      message: Deployment does not have minimum availability.
